--- a/app/src/main/res/layout/activity_tanent_login.xml
+++ b/app/src/main/res/layout/activity_tanent_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="30dp"
     android:background="@drawable/background"
-    tools:context=".tanentLogin">
+    tools:context=".tanentLoginActivity">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
