--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,7 +7,7 @@
     android:padding="30dp"
     android:background="@drawable/background"
     android:layout_height="match_parent"
-    tools:context=".LoginPage">
+    tools:context=".LoginPageActivity">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
