--- a/app/src/main/res/layout/activity_tanentform.xml
+++ b/app/src/main/res/layout/activity_tanentform.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="30dp"
     android:background="@drawable/background"
-    tools:context=".tanentform">
+    tools:context=".tanentformActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
